# bitcoin

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  INSTALL.md  Makefile.am  README.md  configure  configure.ac  libbitcoinkernel.pc.in  test_genex.cmake  vcpkg.json
.circleci/: config.yml
.github/: ci-windows.py
.github/workflows/: ci.yml  cmake.yml  codacy.yml  codeql.yml
build-aux/m4/: ax_cxx_compile_stdcxx.m4  bitcoin_qt.m4
build_msvc/: .gitignore  bitcoin.sln  bitcoin_config.h.in  common.init.vcxproj.in  common.qt.init.vcxproj  msvc-autogen.py  vcpkg.json
build_msvc/bench_bitcoin/: bench_bitcoin.vcxproj  bench_bitcoin.vcxproj.in
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/fuzz/: fuzz.vcxproj
build_msvc/libbitcoin_crypto/: libbitcoin_crypto.vcxproj.in
build_msvc/libbitcoin_qt/: libbitcoin_qt.vcxproj
build_msvc/libbitcoinconsensus/: libbitcoinconsensus.vcxproj
build_msvc/libminisketch/: libminisketch.vcxproj
build_msvc/test_bitcoin/: test_bitcoin.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/: ccache_imagefile  lint_run_all.sh  test_imagefile  windows_test_imagefile
ci/lint/: 04_install.sh  06_script.sh
ci/test/: 00_setup_env.sh  00_setup_env_android.sh  00_setup_env_arm.sh  00_setup_env_freebsd_cross.sh  00_setup_env_i686_centos.sh  00_setup_env_i686_multiprocess.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac.sh  00_setup_env_mac_cross.sh  01_base_install.sh  (+33 more)
cmake/: bitcoin-build-config.h.in  bitcoin-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  optional.cmake  optional_qt.cmake  secp256k1.cmake  subtree-leveldb.cmake  subtree-secp256k1.cmake  tests.cmake
contrib/: gitian-build.py
depends/: .gitignore  Makefile  README.md  config.site.in  depends.cmake.in  funcs.mk  packages.md  toolchain.cmake.in
doc/: Doxyfile.in  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  dependencies.md  developer-notes.md  fuzzing.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  productivity.md  release-notes-empty-template.md  release-notes.md  release-process.md  tracing.md
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrman.cpp  addrman.h  base58.cpp  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-cli.manifest  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoin-wallet.manifest  bitcoin.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoind.manifest  blockencodings.cpp  blockfilter.cpp  blockfilter.h  btcsignals.h  chain.h  checkqueue.h  clientversion.cpp  coins.h  core_io.cpp  core_io.h  core_read.cpp  external_signer.cpp  flatfile.cpp  (+46 more)
src/bench/: CMakeLists.txt  addrman.cpp  bench_bitcoin.cpp  ccoins_caching.cpp  chacha20.cpp  coin_selection.cpp  feefrac_mul.cpp  index_blockfilter.cpp  lockedpool.cpp  nanobench.h  orphan_tx_pool.cpp  parse_hex.cpp  poly1305.cpp  readwriteblock.cpp  streams_findbyte.cpp  txgraph.cpp  util_time.cpp  wallet_balance.cpp  wallet_create_tx.cpp  wallet_encrypt.cpp  wallet_ismine.cpp  wallet_migration.cpp
src/ipc/: CMakeLists.txt  process.cpp
src/ipc/libmultiprocess/: CMakeLists.txt
src/ipc/libmultiprocess/cmake/: TargetCapnpSources.cmake
src/qt/: CMakeLists.txt  README.md  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoin_locale.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  clientmodel.cpp  clientmodel.h  editaddressdialog.cpp  guiutil.cpp  intro.cpp  macos_usernotification.h  macos_usernotification.mm  main.cpp  networkstyle.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.h  overviewpage.cpp  peertablemodel.cpp  peertablemodel.h  peertablesortproxy.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  splashscreen.cpp  trafficgraphwidget.cpp  transactiondesc.cpp  transactiontablemodel.cpp  transactiontablemodel.h  transactionview.cpp  utilitydialog.cpp  walletcontroller.cpp
src/qt/android/: AndroidManifest.xml  CMakeLists.txt  build.gradle  gradle.properties
src/qt/android/res/values/: libs.xml
src/qt/forms/: debugwindow.ui
src/qt/locale/: CMakeLists.txt  bitcoin_ar.ts  bitcoin_ast_ES.ts  bitcoin_az@latin.ts  bitcoin_bn.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en.xlf  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_eu.ts  bitcoin_fi.ts  bitcoin_fo.ts  bitcoin_fr.ts  bitcoin_ga.ts  bitcoin_ga_IE.ts  bitcoin_gd.ts  bitcoin_gl_ES.ts  bitcoin_ha.ts  bitcoin_he.ts  bitcoin_hu.ts  bitcoin_id.ts  bitcoin_is.ts  bitcoin_ka.ts  bitcoin_kk@latin.ts  bitcoin_kl.ts  bitcoin_km.ts  bitcoin_kn.ts  bitcoin_ko.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lb.ts  bitcoin_mg.ts  bitcoin_ml.ts  (+33 more)
src/qt/res/: bitcoin-qt-res.rc  bitcoin-qt.manifest
src/qt/res/core_mainnet/: index.theme
src/qt/res/icon_theme/: index.theme
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  optiontests.cpp  test_main.cpp  wallettests.cpp
src/test/fuzz/: CMakeLists.txt  banman.cpp  buffered_file.cpp  deserialize.cpp  fuzz.cpp  fuzz.h  hex.cpp  http_request.cpp  i2p.cpp  miniscript.cpp  package_eval.cpp  parse_univalue.cpp  process_message.cpp  process_messages.cpp  script_assets_test_minimizer.cpp  span.cpp  tx_pool.cpp
src/test/fuzz/util/: CMakeLists.txt  descriptor.cpp  descriptor.h
src/wallet/: CMakeLists.txt  bdb.cpp  coinselection.cpp  db.cpp  dump.cpp  init.cpp  interfaces.cpp  migrate.cpp  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  sqlite.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletutil.cpp
src/wallet/rpc/: backup.cpp  spend.cpp  wallet.cpp
src/wallet/test/: init_test_fixture.cpp  util.cpp  wallet_tests.cpp
src/wallet/test/fuzz/: CMakeLists.txt  fees.cpp
test/: CMakeLists.txt  README.md  config.ini.in
(+375 files in other folders)
